# hashcode2018

./: .gitignore  CMakeLists.txt  README.md  hashcode2018.sln  hashcode2018.vcxproj  hashcode2018.vcxproj.filters
include/: Map.hpp  Ride.hpp  Vector2.hpp  Vehicle.hpp
result/: a.out  b.out
sources/: Map.cpp  Ride.cpp  Vehicle.cpp  main.cpp
x64/Release/hashcode2018.tlog/: CL.command.1.tlog  hashcode2018.lastbuildstate
